--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<li>css</li>
 		<li>javascript</li>
 	</ol>
-	<iframe width="560" height="315" src="https://www.youtube.com/embed/RiROAV-ECR00" frameborder="0" /*allowfullscreen*/></iframe>
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/RiROAV-ECR0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	<div>
 		<p>hello world <strong>!<strong><br>
 			I'm <u>html</u>
